# waitlist

./: .env  .env.example  .gitignore  .gitmodules  Dockerfile  LICENSE.txt  README.md  build.sh  check.sh  docker-compose.yml  pre-flight.sh  readme.md
backend/: .gitignore  Cargo.toml  Dockerfile  Rocket.toml  build.sh  config.example.toml  shrink-sde.sh
backend/data/: categories.yaml  fitnotes.yaml  modules.yaml  skillplan.yaml  skills.yaml  tags.yaml
backend/eve-data-core/: .gitignore  Cargo.toml
backend/eve-data-core/src/: attribute.rs  category.rs  effect.rs  fitting.rs  inv_types.rs  lib.rs
backend/eve-data-macros/: Cargo.toml
backend/eve-data-macros/src/: lib.rs
backend/sql/: migration_mysql_0001.sql  migration_mysql_0002.sql  migration_mysql_0003.sql  migration_mysql_0004.sql  migration_mysql_0005.sql  migration_mysql_0006.sql  migration_sqlite_0002.sql  migration_sqlite_0003.sql  migration_sqlite_0004.sql  migration_sqlite_0005.sql  migration_sqlite_0006.sql  mysql.sql  sqlite.sql
backend/src/: app.rs  config.rs  main.rs  request_logger.rs
backend/src/core/: affiliation.rs  auth.rs  ban.rs  esi.rs  fleet_updater.rs  mod.rs  skill_updater.rs  sse.rs
backend/src/data/: categories.rs  character.rs  fitdiffer.rs  fits.rs  implants.rs  mod.rs  skillplans.rs  skills.rs  tags.rs  variations.rs  yamlhelper.rs
backend/src/routes/: acl.rs  announcements.rs  auth.rs  badges.rs  bans.rs  categories.rs  commanders.rs  fittings.rs  fleet.rs  healthcheck.rs  implants.rs  mod.rs  modules.rs  notes.rs  pilot.rs  search.rs  skillplans.rs  skills.rs  sse.rs  (+2 more)
(+208 files in other folders)
